fix: keep pairing QR helpers compatible with Shield Android 11